# ML_fundamental_learning

my_d2l/: 2_1.py  2_2.py  2_3.py  2_4.py  2_5.py  2_6.py  3_1.py  3_2.py  3_3.py  3_5.py  3_6.py  4_2.py  4_3.py  4_4.py  4_4_ans.py  6_2.py  6_3.py  6_4.py  6_5.py  6_6_LeNet.py  pyproject.toml
