[project]
name = "my-d2l"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "d2l>=0.17.0",
    "ipython>=9.4.0",
    "matplotlib>=3.10.5",
    "matplotlib-inline>=0.1.7",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
